# Trusted_Bridge

./: README.md
near/: Cargo.toml  build.sh  test.sh
near/msg-verify/: Cargo.toml  build.sh
near/msg-verify/src/: lib.rs
near/node-evaluation/: Cargo.toml
near/node-evaluation/src/: lib.rs
near/tests/sim/: main.rs  no_macros.rs  utils.rs
