[package]
name = "msg-verify"
version = "0.1.0"
authors = ["xiyu1984"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.4"
cross_chain = { path = "../../../dante-cross-chain/near/contract/cross_chain" }
node_evaluation = { path = "../node-evaluation" }
hex = "0.4.3"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
